crates/trace-facts/tests/ui/trace_fact_spec_optional_ref_requires_option.rs
use fe_trace_facts::{OriginExportKey, TraceFactSpec};
use serde::Serialize;

#[derive(Serialize, TraceFactSpec)]
#[trace_fact(type = "bad", relation = "base_bad")]
struct BadOptionalRef {
    #[trace_ref(optional)]
    key: OriginExportKey,
}

fn main() {}
